<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Mass Info</string>
	<string name="menu_next_mass">Church near this</string>
	<string name="menu_search_mass">Search mass</string>
	<string name="menu_favorite">Favorites churches</string>
	<string name="menu_church_book">Book of churches</string>
	<string name="menu_quit">Quit</string>
	<string name="menu_lectio">Others Applications</string>
	<string name="main_menu_about">About</string>
	<string name="main_menu_website">Website</string>
	<string name="main_menu_contact">Contact us</string>
	<string name="main_menu_share">Share</string>
	<string name="main_menu_webcatho">Webcatho</string>
	<string name="map_menu_my_position">My Location</string>
	<string name="map_menu_list">As list</string>
	<string name="menu_context_detail">Detail of the church</string>
	<string name="menu_context_schedules">Mass schedules</string>
	<string name="menu_context_center">Center on maps</string>
	<string name="menu_context_near">Search near this church</string>
	<string name="menu_context_schedule_near">Search mass near this church</string>
	<string name="menu_maps">View on maps</string>
	<string name="menu_context_event">Add to calendar</string>
	<string name="menu_context_event_share">Share this mass</string>
	<string name="menu_remove_favory">Remove from favory</string>
	<string name="description_home">Home</string>
	<string name="description_share">Share</string>
	<string name="about_title">Mass Info</string>
	<string name="about_sub_title">Developed by: Patrice de Saint Steban</string>
	<string name="about_copyright">A service given by the french\'s bishop conference
		(CEF), more information on the website
		http://www.messesinfo.catholique.fr
	</string>
	<string name="about_website">Find information on the site:
		http://androide.catholique.fr</string>
	<string name="about_webcatho">http://www.webcatho.fr</string>

	<string name="search">Search ...</string>
	<string name="list_empty">No results for your query</string>
	<string name="list_favorites_empty">Add some church in your favorites list by clicking
		on the star in the church display view</string>
	<string name="search_mass_place">Place</string>
	<string name="search_mass_options">Celebration\'s type</string>
	<string name="search_mass_city_title">City</string>
	<string name="search_mass_zip_title">Zip code</string>
	<string name="search_mass_state_title">State</string>
	<string name="search_mass_celebration_title">Special celebration</string>
	<string name="search_mass_saturday_title">Saturday</string>
	<string name="search_mass_sunday_title">Sunday</string>
	<string name="search_mass_morning_title">Morning</string>
	<string name="search_mass_afternoon_title">Afternoon</string>
	<string name="search_mass_empty">Click to fill this field</string>
	<string name="search_mass_submit_title">Search</string>
	<string name="search_mass_reset_title">Reset</string>
	<string name="search_mass_loading_title">Search in progress ...</string>
	<string name="search_mass_choose_department">Choose the department</string>
	<string name="search_mass_extension_search">There are no schedule for the given search, Choose the location to launch an extension search</string>
	<string name="search_near_launch">Search around your position</string>
	<string name="search_launch">Launch the search</string>
	<string name="search_mass_loading">The search and the display can may take time.
		Please wait...</string>
	<string name="list_search_church_help">Search your church by the name, the city, the
		parish and/or zip code</string>
	<string name="list_search_mass_help">Search your mass by the name, the city, the
		parish and/or zip code</string>
	<string name="list_search_loading">Search in progress ...</string>
	<string name="loading">Loading ...</string>
	<string name="church_tab_information">Information</string>
	<string name="church_tab_schedule">Schedules</string>
	<string name="church_see_map">See in a maps</string>
	<string name="church_send_mail">Send an email</string>
	<string name="church_groupe_email_send_mail">Send an email to the diocese %s</string>
	<string name="church_groupe_internet_view_site">Go to the website of the diocese %s</string>
	<string name="church_view_site">Go to the website</string>
	<string name="church_call_tel">Call</string>
	<string name="church_send_fax">Send a Fax</string>
	<string name="church_groupe_name">Diocese of %s</string>
	<string name="schedules_empty">No schedules available</string>
	<string name="zoom_in_for_display">Zoom in to see church</string>
	<string name="error_server">The server MessesInfo didn\'t response</string>
	<string name="error_church_not_exist">This church didn\'t exist</string>
	<string name="error_church_book">An error occurred</string>
	<string name="error_church_schedule">An error occurred</string>
	<string name="error_search_schedule">An error occurred</string>
	<string name="contact_messesinfo">Contact MessesInfo</string>
	<string name="messesinfo_email_subject">Contact from the Android application</string>
	<string name="messesinfo_share">see church and mass with this application market//details?id=cef.messeinfo</string>
	<string name="messesinfo_share_subject">Messesinfo for Android</string>
	<string name="share_with">Share with</string>
	<string name="localisation_in_progress">geolocalisation in progress...</string>
	<string name="church_next_mass">Next mass : </string>
	<string name="need_help">Need help ?</string>
</resources>
