<?xml version="1.0" encoding="utf-8"?>
	<!--
		Copyright (C) 2009 Virgil Dobjanschi, Jeff Sharkey Licensed under the
		Apache License, Version 2.0 (the "License"); you may not use this file
		except in compliance with the License. You may obtain a copy of the
		License at http://www.apache.org/licenses/LICENSE-2.0 Unless required
		by applicable law or agreed to in writing, software distributed under
		the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR
		CONDITIONS OF ANY KIND, either express or implied. See the License for
		the specific language governing permissions and limitations under the
		License.
	-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout style="@style/TitleBar">
		<ImageButton style="@style/TitleBarAction"
			android:contentDescription="@string/description_home" android:src="@drawable/ic_title_home"
			android:onClick="goHome" />
		<ImageView style="@style/TitleBarSeparator" />
		<TextView style="@style/TitleBarText" android:text="@string/menu_search_mass"/>
		<ImageView style="@style/TitleBarSeparator" />
		<ImageButton style="@style/TitleBarAction" android:id="@+id/btn_title_search"
			android:src="@drawable/ic_title_search"/>
	</LinearLayout>
	<LinearLayout android:layout_height="fill_parent"
		android:id="@android:id/empty"
		android:layout_width="fill_parent" android:gravity="top"
		android:layout_marginLeft="5dip" android:layout_marginTop="5dip" android:orientation="vertical">
		<EditText android:layout_height="wrap_content" android:id="@+id/searchField"
			android:hint="@string/search" android:singleLine="true"
			android:layout_width="fill_parent"
			/>
        <Button android:layout_height="wrap_content" android:layout_width="fill_parent"
			android:id="@+id/searchButton"
			android:drawableLeft="@drawable/search" android:text="@string/search_launch" android:onClick="onSearchClick"></Button>
		<Button android:layout_height="wrap_content" android:layout_width="fill_parent"
            android:id="@+id/nearButton"
            android:drawableLeft="@drawable/target" android:text="@string/search_near_launch" android:onClick="onNearSearchClick"></Button>
		<TextView android:id="@+id/localisation_in_progress" android:paddingTop="8dip" 
			android:textColor="@color/primary_text_light" 
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:gravity="center_horizontal" android:text="@string/localisation_in_progress"
			android:textSize="18dip" android:drawablePadding="2dip"
			android:visibility="gone" />
		<TextView android:id="@+id/help_text" android:paddingTop="8dip" android:textColor="@color/secondary_text_dark" android:textStyle="bold" 
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:gravity="center_horizontal" android:text="@string/need_help"
			android:textSize="18dip" android:drawableLeft="@drawable/need_help" android:drawablePadding="2dip" 
			android:onClick="onNeedHelpClick" android:clickable="true"/>
	</LinearLayout>
</LinearLayout>