<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@android:id/tabhost" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:orientation="vertical"
		android:gravity="center_vertical">
		<LinearLayout style="@style/TitleBar">
			<ImageButton style="@style/TitleBarAction"
				android:contentDescription="@string/description_home" android:src="@drawable/ic_title_home"
				android:onClick="goHome" />
			<ImageView style="@style/TitleBarSeparator" />
			<TextView style="@style/TitleBarText" android:ellipsize="marquee"/>
			<ImageView style="@style/TitleBarSeparator" />
			<ImageButton style="@style/TitleBarAction" android:id="@+id/btn_title_refresh"
				android:src="@drawable/ic_title_refresh" android:onClick="onRefreshClick" />
			<ProgressBar style="@style/TitleBarProgressIndicator"
				android:id="@+id/title_refresh_progress" android:visibility="gone" />

			<ImageView style="@style/TitleBarSeparator" />
			<ImageButton style="@style/TitleBarAction"
				android:contentDescription="@string/menu_maps" android:src="@drawable/ic_title_map"
				android:onClick="onMapClick" />
		</LinearLayout>
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:orientation="horizontal"
			android:gravity="center_vertical" android:paddingLeft="1dip"
			android:paddingRight="1dip">

			<LinearLayout android:layout_width="0dip"
				android:layout_weight="1" android:layout_height="wrap_content"
				android:gravity="center_vertical" android:orientation="vertical"
				android:layout_marginLeft="15dip">

				<TextView android:id="@+id/nom" android:layout_width="wrap_content"
					android:shadowColor="#BB000000" android:shadowRadius="2.75"
					android:maxLines="2" android:ellipsize="marquee"
					android:singleLine="true" android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceMedium" android:visibility="gone"/>

				<TextView android:id="@+id/paroisse" android:layout_width="wrap_content"
					android:singleLine="true" android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceSmall" />

				<TextView android:id="@+id/commune" android:layout_width="wrap_content"
					android:singleLine="true" android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceSmall"
					android:textStyle="bold" />

			</LinearLayout>
			<CheckBox android:id="@+id/star" style="?android:attr/starStyle"
				android:layout_width="wrap_content" android:layout_height="wrap_content" />
		</LinearLayout>

		<TabWidget android:id="@android:id/tabs"
			android:layout_width="fill_parent" android:layout_height="wrap_content" />
		<FrameLayout android:id="@android:id/tabcontent"
			android:layout_width="fill_parent" android:layout_height="fill_parent">
			<FrameLayout android:id="@+id/information_tab"
				android:layout_width="fill_parent" android:layout_height="fill_parent">
				<TextView android:id="@+id/loading" android:layout_width="wrap_content"
					android:singleLine="true" android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceSmall"
					android:textStyle="bold" android:text="@string/loading" />
				<ListView android:id="@+id/list_contact"
					android:layout_width="fill_parent" android:layout_height="fill_parent"
					android:scrollbarStyle="outsideOverlay" />
			</FrameLayout>
		</FrameLayout>
	</LinearLayout>
</TabHost>
